--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "true",
-  "version": "0.0.0",
-  "private": true,
-  "author": "true",
-  "description": "A simple helpful robot for your Company",
-  "dependencies": {
-    "hubot": "^2.11.0",
-    "hubot-diagnostics": "0.0.1",
-    "hubot-google-images": "^0.1.2",
-    "hubot-google-translate": "^0.1.0",
-    "hubot-help": "^0.1.1",
-    "hubot-heroku-keepalive": "0.0.4",
-    "hubot-maps": "0.0.1",
-    "hubot-pugme": "^0.1.0",
-    "hubot-redis-brain": "0.0.2",
-    "hubot-rules": "^0.1.0",
-    "hubot-scripts": "^2.5.16",
-    "hubot-shipit": "^0.1.1",
-    "hubot-youtube": "^0.1.2",
-    "hubot-slack": "^3.2.1"
-  },
-  "engines": {
-    "node": "0.10.x"
-  }
+    "name": "true",
+    "version": "0.0.0",
+    "private": true,
+    "author": "true",
+    "description": "A simple helpful robot for your Company",
+    "dependencies": {
+        "cheerio": "~0.18.0",
+        "clark": "~0.0.6",
+        "cleverbot-node": "~0.1.8",
+        "htmlparser": "~1.7.7",
+        "hubot": "^2.11.0",
+        "hubot-calculator": "~0.4.0",
+        "hubot-diagnostics": "0.0.1",
+        "hubot-google-images": "^0.1.2",
+        "hubot-google-translate": "^0.1.0",
+        "hubot-help": "^0.1.1",
+        "hubot-heroku-keepalive": "0.0.4",
+        "hubot-maps": "0.0.1",
+        "hubot-pugme": "^0.1.0",
+        "hubot-redis-brain": "0.0.2",
+        "hubot-rules": "^0.1.0",
+        "hubot-scripts": "^2.5.16",
+        "hubot-shipit": "^0.1.1",
+        "hubot-youtube": "^0.1.2",
+        "hubot-slack": "^3.2.1",
+        "nodepie": "~0.6.6",
+        "soupselect": "~0.2.0"
+    },
+    "engines": {
+        "node": "0.10.x"
+    }
 }
